--- a/index 4.html
+++ b/index 4.html
@@ -7,13 +7,17 @@
   </head>
   
   <body>
-<h1 class="hstyle1">Did you know?</h1>
 
-<section class="section1">
-<p>Antartica is the only continent without reptiles or snakes.</p>
-</section>
+    <div class="fluid">
+    <h1 class="hstyle1">Did you know?</h1>
 
-<div class="readmore">Read more ... </div>
+     <section class="section1">
+     <p>Antartica is the only continent without reptiles or snakes.</p>
+     </section>
+
+     <div class="readmore">Read more ... </div>
+
+</div>
       
 </body>
 </html>
